# CEMA

./: .gitignore  LICENSE  README.md  eval_all.sh  evalute.ps1  pyproject.toml  requirements.txt  setup.py
cema/: __init__.py
cema/llm/: playground.py  verbalize.py
cema/oxavi/: ofeatures.py  util.py
cema/scripts/: evaluation.py  plotting.py  run.py  util.py
cema/xavi/: __init__.py  features.py  language.py  query.py
llm/: gpt.py  playground.py  run.py  verbalize.py
llm/configs/: test_scenario_1.json
oxavi/: __init__.py  odistribution.py  oexplainer.py  ofeatures.py  util.py
scenarios/: eval.py  evaluation.py  playground.py  plotting.py  query_parser.py  run.py  test.py  util.py
scenarios/configs/: scenario0.json  scenario1.json  scenario10.json  scenario11.json  scenario2.json  scenario3.json  scenario4.json  scenario5.json  scenario6.json  scenario7.json  scenario8.json  scenario9.json  test.json
scenarios/llm/: base.json  model_configs.json
scenarios/maps/: scenario10.xodr  scenario5.xodr
scenarios/queries/: final_queries.json  query_scenario0.json  query_scenario1.json  query_scenario10.json  query_scenario11.json  query_scenario2.json  query_scenario3.json  query_scenario4.json  query_scenario5.json  query_scenario6.json  query_scenario7.json  query_scenario9.json  test_queries.json
scenarios/queries/old/: query_scenario1.json  query_scenario4.json  query_scenario5.json  query_scenario7.json  query_scenario8.json
scenarios/scripts/: scenario1.py  scenario2.py  util.py
src/cema/: __init__.py
src/cema/llm/: __init__.py  chat.py  interface.py  run.py  util.py
src/cema/oxavi/: __init__.py  odistribution.py  oexplainer.py  util.py
src/cema/script/: run.py  util.py
src/cema/xavi/: explainer.py  matching.py  plotting.py
xavi/: __init__.py  distribution.py  explainer.py  explainer_old.py  features.py  language.py  matching.py  plot_simulation.py  plotting.py  query.py  simulation.py  util.py
